--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,6 +1,8 @@
 {
     "recommendations": [
         "james-yu.latex-workshop",
-        "arthurwang.vsc-prolog"
+        "arthurwang.vsc-prolog",
+        "ritwickdey.liveserver",
+        "ymotongpoo.licenser"
     ]
 }
