ci: Run on the `main` branch

--- a/.github/workflows/deploy-pages.yml
+++ b/.github/workflows/deploy-pages.yml
@@ -2,7 +2,7 @@ name: "Build and Deploy"
 on:
   push:
     branches:
-      - content
+      - main
     paths-ignore:
       - .gitignore
       - README.md
